# TravelGenie

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  claude_orchestrator.py  dynamodb_database.py  env.example  loaded.md  main.py  requirements.txt  setup.md  slack_bot.py  streamlit_app.py  test_mcp.py
Travel_Genie/: .env.example  .gitignore  HOW_TO_RUN.md  INTEGRATION_STATUS.md  MCP_PORT_CONFIGURATION.md  QUICK_START.md  README.md  RUN_GUIDE.md  SETUP_AND_TESTING.md  requirements.txt  test_claude_models.py  test_servers.py  test_setup.py
Travel_Genie/agents/: claude_agent.py  video_analyzer.py
Travel_Genie/examples/: README.md  fastmcp_client_example.py  integration_example.py
Travel_Genie/mcp_servers/: booking_server.py  google_maps_server.py  itinerary_server.py  maps_server.py  orchestrator.py
Travel_Genie/ui/: app.py  components.py
Travel_Genie/utils/: config.py  security.py  (+1 more)
config/: __init__.py  settings.py
data/: travelgenie.db
mock_application/: HOW_TO_LOAD_TEST.md  LOAD_TESTING_GUIDE.md  QUICK_START_LOAD_TESTING.md  README.md  ec2_ecs_comparison.py  llama_client.py  load_tester.py  mock_llm_client.py  mock_mcp_servers.py  mock_orchestrator.py  performance_monitor.py  requirements.txt  run_load_tests.py  travel_genie_mock.py
modules/: __init__.py  currency.py  events.py  images.py  intent_detector.py  mcp_client.py  places.py  profile.py  response_composer.py  routing.py  weather.py
servers/traffic_crowd_server/: HOW_IT_WORKS.md  README.md  main.py  pyproject.toml  traffic_crowd_server.py
tests/: test_apis.py
(+53 files in other folders)
